--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,31 @@
 {
-    "name"          : "jemdev/chiffrement",
-    "description"   : "chiffrement de données",
-    "keywords"      : ["chiffrement", "mcrypt"],
-    "license"       : "CECILL-2.0",
-    "type"          : "library",
-    "authors"       : [
-        {
-            "name": "Jean Molliné",
-            "email": "jmolline@gmail.com"
-        }
-    ],
-    "require"       : {
-        "php": ">=5.4.0"
-    },
-    "autoload"      : {
-        "psr-4": {
-            "jemdev\\chiffrement\\": "."
-        },
-        "classmap": [
-            "crypt.php",
-            "Exception.php",
-            "locale/fr.php",
-            "locale/en.php"
-        ]
-    }
+	"name" : "jemdev/chiffrement",
+	"description" : "chiffrement de données",
+	"keywords" : [
+		"chiffrement",
+		"mcrypt",
+		"openssl"
+	],
+	"license" : "CECILL-2.0",
+	"type" : "library",
+	"authors" : [{
+			"name" : "Jean Molliné",
+			"email" : "jmolline@gmail.com"
+		}
+	],
+	"require" : {
+		"php" : ">=7.2.0"
+	},
+	"autoload" : {
+		"psr-4" : {
+			"jemdev\\chiffrement\\" : "."
+		},
+		"classmap" : [
+			"crypt.php",
+			"cryptopenssl.php",
+			"Exception.php",
+			"locale/fr.php",
+			"locale/en.php"
+		]
+	}
 }
